Fix wrong size of h1

--- a/themes/simple/assets/css/base.css
+++ b/themes/simple/assets/css/base.css
@@ -105,7 +105,7 @@ p {
 }
 
 h1, h2, h3, h4, h5 {
-  margin: 0 0 0.2rem 0;
+  margin: 0 0 0.3rem 0;
 }
 
 figure {
@@ -129,4 +129,9 @@ ul ul {
   background-color: var(--tip-background);
   padding: 1rem;
   border-radius: .25rem;
+}
+
+h1 {
+  font-size: 2rem;
+  line-height: 1.3;
 }
